--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -45,6 +45,12 @@ jobs:
       with:
         path: ~/.cache/Cypress
         key: ${{ runner.os }}-cypress-${{ github.sha }}
+    - name: Cache modules
+      id: cypress-npm
+      uses: actions/cache@v2
+      with:
+        path: skaffold_learning/node_modules
+        key: ${{ runner.os }}-cypress-npm-${{ github.sha }}
     - name: Install dep Cypress
       if: steps.cypress-cache.outputs.cache-hit != 'true'
       run:
