--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -45,8 +45,8 @@ jobs:
       with:
         path: |
           ~/.cache/Cypress
-          skaffold_learning/node_modules
-        key: my-cache-${{ runner.os }}-${{ hashFiles('skaffold_learning/package-lock.json') }}
+          node_modules
+        key: my-cache-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
     - name: install cypress
       if: steps.cypress-cache.outputs.cache-hit != 'true'
       run: npm i cypress
