--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -31,11 +31,6 @@ jobs:
         curl -Lo skaffold https://storage.googleapis.com/skaffold/releases/latest/skaffold-linux-amd64
         chmod +x skaffold
         sudo mv skaffold /usr/local/bin/
-    - name: cache for Images
-      uses: actions/cache@v2
-      with:
-        path: ~/.skaffold/cache
-        key: skaffold-cache-${{ runner.os }}-${{ github.sha }}
     - name: Run Skaffold
       run: |
         skaffold run
@@ -49,7 +44,7 @@ jobs:
         key: my-cache-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
     - name: install cypress
       if: steps.cypress-cache.outputs.cache-hit != 'true'
-      run: npm i cypress
+      run: npm ci
     - name: Run Cypress test
       run: |
         npm run test
