--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -36,7 +36,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: |
-          skaffold/cache
+          ~/.skaffold/cache
         key: sk-${{ github.sha }}
         restore-keys: |
           sk-${{ github.sha }}
@@ -44,7 +44,7 @@ jobs:
     - name: Run Skaffold
       run: |
         cat skaffold/cache || true
-        skaffold run --cache-file='skaffold/cache'
+        skaffold run --cache-file='~/.skaffold/cache'
     - name: Cache Cypress dependencies
       id: cypress-cache
       uses: actions/cache@v2
