--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,11 +1,11 @@
-apiVersion: skaffold/v1alpha2	
+apiVersion: skaffold/v1alpha2
 kind: Config
 build:
   artifacts:
   - imageName: nginx-skaffold
     context: .
     docker:
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
   local: {}
 deploy:
   kubectl:
