--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,8 +1,8 @@
-apiVersion: skaffold/v1alpha2
+apiVersion: skaffold/v2alpha2
 kind: Config
 build:
   artifacts:
-  - imageName: nginx-skaffold
+  - image: nginx-skaffold
     context: .
     docker:
       dockerfile: Dockerfile
