--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -36,14 +36,17 @@ jobs:
       uses: actions/cache@v2
       with:
         path: |
-          ~/.skaffold/cache
+          skaffold_cache/cache
         key: sk-${{ github.sha }}
         restore-keys: |
           sk-${{ github.sha }}
           sk-
     - name: Run Skaffold
       run: |
-        skaffold run
+        cat skaffold_cache/cache || true
+        skaffold run --cache-file='skaffold_cache/cache'
+        echo "Skaffold Cache Created"
+        cat skaffold/cache || true
     - name: Cache Cypress dependencies
       id: cypress-cache
       uses: actions/cache@v2
