--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -17,8 +17,5 @@ jobs:
         run: |
           the_secret=$((RANDOM))
           echo "::add-mask::$the_secret"
-          echo "secret-number=$the_secret" >> "$GITHUB_OUTPUT"
-      - name: Use that secret output (protected by a mask)
-        run: |
-          echo "the secret number is ${{ steps.sets-a-secret.outputs.secret-number }}"
+          echo "the secret number is $secret-number"
   
