--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -12,10 +12,7 @@ jobs:
   generate-a-secret-output:
     runs-on: ubuntu-latest
     steps:
-      - id: sets-a-secret
-        name: Generate, mask, and output a secret
-        run: |
-          the_secret=$((RANDOM))
-          secret-number="::add-mask::$the_secret"
-          echo "the secret number is ${secret-number}"
-  
+      - name: bash-version
+        env:
+          MY_NAME: "Mona The Octocat"
+        run: echo "::add-mask::$MY_NAME"
