--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -14,8 +14,10 @@ jobs:
     steps:
       - name: bash-version
         run: |
+          cd ../../
           MY_NAME="Mona The Octocat"
           # Mask the github.actor value
            echo "::add-mask::$MY_NAME"
           # Use the masked value in your commands or scripts
             echo "Masked actor: $MY_NAME"
+            ./test_mask.sh test_mask $MY_NAME
