--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -12,6 +12,8 @@ jobs:
   generate-a-secret-output:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
       - name: bash-version
         run: |
           cd ../../
