--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: bash-version
         run: |
           echo $(pwd)
-          MY_NAME="Mona The Octocat"
+          MY_NAME=${{ github.actor }}
           # Mask the github.actor value
            echo "::add-mask::$MY_NAME"
           # Use the masked value in your commands or scripts
