--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -18,9 +18,9 @@ jobs:
           ref: test-masking
       - name: bash-version
         run: |
-          echo ${{ github.actor }}
+          echo ${{ github.actor }}:${{ secrets.VERY_SECRET}}
           # Mask the github.actor value
            echo "::add-mask::$MY_NAME"
           # Use the masked value in your commands or scripts
             echo "Masked actor: $MY_NAME"
-            ./test_mask.sh test_mask $MY_NAME
+            #./test_mask.sh test_mask $MY_NAME
