--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -11,7 +11,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    env:
+      RUNNER_LOGS: /tmp/runner_logs
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
@@ -61,3 +62,8 @@ jobs:
     - name: Run Cypress test
       run: |
         npm run test
+    - name: Upload runner_log
+      uses: actions/upload-artifact@v3
+      with:
+        name: runner_log
+        path: /tmp/runner_logs
