--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -27,10 +27,10 @@ jobs:
       run: |
         minikube start
 
-    - name: Install kustomize, kubectl and skaffold
+    - name: Install skaffold
       uses: daisaru11/setup-cd-tools@v1
       with:
-        skaffold: "2.5.1"
+        skaffold: "1.15.0"
     - name: Cache skaffold image builds & config
       uses: actions/cache@v2
       with:
